<resources>
    <string name="app_name" translatable="false">Placar App</string>
    <string name="title_clube">Clubs</string>
    <string name="label_visitante">Home</string>
    <string name="text_casa">Away</string>
    <string name="text_nome_casa">Type Home Name</string>
    <string name="text_nome_visit">Type away name</string>
    <string name="btncomecar">Start Game</string>

    <string name="message_to_share">The game between %1$s and %2$s end %3$d to %4$d</string>
</resources>
